添加提交咨询功能

--- a/Python/Django/MxOnline/templates/org-list.html
+++ b/Python/Django/MxOnline/templates/org-list.html
@@ -130,8 +130,8 @@
                     <input type="text" name="course_name" id="companyAddress" placeholder="课程名" maxlength="50" />
                 </div>
                 <p class="error company-tips" id="jsCompanyTips"></p>
+                {% csrf_token %}
 				<input class="btn" type="text" id="jsStayBtn" value="立即咨询 >" />
-            <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
             </form>
 		</div>
 
@@ -149,4 +149,29 @@
 		</div>
         </div>
 </section>
+{% endblock %}
+
+{% block custom_js %}
+<script>
+    $(function(){
+        $('#jsStayBtn').on('click', function(){
+            $.ajax({
+                cache: false,
+                type: "POST",
+                url:"{% url "org:add_ask" %}",
+                data:$('#jsStayForm').serialize(),
+                async: true,
+                success: function(data) {
+                    if(data.status === 'success'){
+                        $('#jsStayForm')[0].reset();
+                        alert("提交成功")
+                    }else if(data.status === 'fail'){
+                        $('#jsCompanyTips').html(data.msg)
+                    }
+                }
+            });
+        });
+    })
+
+</script>
 {% endblock %}
