慕课网Django: 完善课程章节和评论页面

--- a/Python/Django/MxOnline/templates/course-video.html
+++ b/Python/Django/MxOnline/templates/course-video.html
@@ -77,9 +77,10 @@
                         <ul class="video">
                             {% for video in lesson.get_lesson_video %}
                             <li>
-                                <a target="_blank" href='{% url "course:video_play" video.id %}' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_times }})
+{#                                <a target="_blank" href='{% url "course:video_play" video.id %}' class="J-media-item studyvideo">#}
+                                    {{ video.name }} ({{ video.learn_times }})
                                     <i class="study-state"></i>
-                                </a>
+{#                                </a>#}
                             </li>
                             {% endfor %}
                         </ul>
