--- a/Python/Django/MxOnline/templates/org_base.html
+++ b/Python/Django/MxOnline/templates/org_base.html
@@ -39,14 +39,14 @@
                                 </dd>
                             </dl>
                             <div class="btn">
-{#                                <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>#}
-{#                                <a class="fr" href="{% url 'logout' %}">退出</a>#}
+                                <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
+                                <a class="fr" href="{% url 'logout' %}">退出</a>
                             </div>
                         </div>
                     </div>
-{#                    <a href="{% url 'users:mymessage' %}">#}
-{#                        <div class="msg-num"> <span id="MsgNum">{{ request.user.unread_nums }}</span></div>#}
-{#                    </a>#}
+                    <a href="{% url 'users:mymessage' %}">
+                        <div class="msg-num"> <span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                    </a>
                 {% else %}
                     <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                     <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
