* 电影周周看小程序: 推荐页面改添加动态绑定和条件渲染

--- a/wechatApp/movieWeekly/pages/about/about.wxml
+++ b/wechatApp/movieWeekly/pages/about/about.wxml
@@ -7,7 +7,7 @@
       url='/pages/weekly/weekly' 
       class='nav-default'
       style='display: inline;'
-      open-type='navigate'
+      open-type='switchTab'
       hover-class='nav-hover'>每周推荐一部好片</navigator>
   </view>
   <text>weibo: weibo.com</text>
