--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxml
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxml
@@ -1,7 +1,13 @@
 <!--pages/weekly/weekly.wxml-->
 <view class='container'>
   <text>本周推荐</text>
-  <image src='/images/jf.jpg'></image>
-  <text>教父</text>
-  <text>点评: 最精彩的剧本, 最真实的黑帮电影.</text>
+  <image src='{{thisWeekMovie.imagePath}}'></image>
+  <text>{{thisWeekMovie.name}}</text>
+  <text>点评: {{thisWeekMovie.comment}}</text>
+
+  <text 
+    style='font-size:16px; color: red'
+    wx:if='{{thisWeekMovie.isHighlyRecommended}}'
+    >强烈推荐</text>
+    <!-- 对于需要频繁切换显示状态的可以使用 hidden 属性 -->
 </view>
