--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxss
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxss
@@ -1,1 +1,15 @@
 /* pages/weekly/weekly.wxss */
+.movie {
+  display: flex;
+}
+
+.movie-details {
+  display: flex;
+  flex-direction: column;
+  width: 550rpx;
+}
+
+.movie-image {
+  width: 200rpx;
+  height: 200rpx;
+}
