--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxml
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxml
@@ -1,17 +1,16 @@
 <!--pages/weekly/weekly.wxml-->
-<view class='container'>
-  <text>本周推荐</text>
-  
-  <view class='movie' wx:for="{{weeklyMovieList}}" wx:key="{{index}}">
-    <image class='movie-image' src="{{item.imagePath}}"></image>
-    <view class='movie-details'>
-      <text>第{{index+1}}周: {{item.name}}</text>
-      <text>点评: {{item.comment}}</text>
-      <text 
-      style='font-size:16px; color: red'
-      wx:if='{{item.isHighlyRecommended}}'
-      >强烈推荐</text>
-      <!-- 对于需要频繁切换显示状态的可以使用 hidden 属性 -->
-    </view>
-  </view>
+<view>
+
+  <swiper class='movie-swiper' indicator-dots='{{true}}' previous-margin="50rpx" next-margin="50rpx">
+    <swiper-item class='movie' wx:for="{{weeklyMovieList}}" wx:key="{{index}}">
+      <view class='container movie-card'>
+        <image class='movie-image' src="{{item.imagePath}}"></image>
+        <text>第{{index+1}}周: {{item.name}}</text>
+        <text>点评: {{item.comment}}</text>
+        <text style='font-size:16px; color: red' wx:if='{{item.isHighlyRecommended}}'>强烈推荐</text>
+        <!-- 对于需要频繁切换显示状态的可以使用 hidden 属性 -->
+      </view>
+    </swiper-item>
+  </swiper>
+
 </view>
