--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxss
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxss
@@ -13,3 +13,14 @@
   width: 200rpx;
   height: 200rpx;
 }
+
+.movie-swiper {
+  height: 90vh; 
+}
+
+.movie-card {
+  height: 100%;
+  width: 100%;
+  background: #eee;
+  margin: 0 20rpx;
+}
