电影周周看小程序: 根据生命周期函数, 使推荐页面自动切换最新页面

--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxss
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxss
@@ -23,4 +23,16 @@
   width: 100%;
   background: #eee;
   margin: 0 20rpx;
+  position: relative;
+}
+
+.return-button{
+  position: absolute;
+  right: 0;
+  top: 40px;
+  font-size: 26rpx;
+  font-style: italic;
+  border: 1px solid blud;
+  border-right: 0;
+  border-radius: 10%;
 }
