--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxml
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxml
@@ -1,7 +1,8 @@
 <!--pages/weekly/weekly.wxml-->
 <view>
 
-  <swiper class='movie-swiper' indicator-dots='{{true}}' previous-margin="50rpx" next-margin="50rpx">
+  <swiper class='movie-swiper' indicator-dots='{{true}}' previous-margin="50rpx" next-margin="50rpx"
+   current='{{currentIndex}}'>
     <swiper-item class='movie' wx:for="{{weeklyMovieList}}" wx:key="{{index}}">
       <view class='container movie-card'>
         <image class='movie-image' src="{{item.imagePath}}"></image>
@@ -9,6 +10,8 @@
         <text>点评: {{item.comment}}</text>
         <text style='font-size:16px; color: red' wx:if='{{item.isHighlyRecommended}}'>强烈推荐</text>
         <!-- 对于需要频繁切换显示状态的可以使用 hidden 属性 -->
+
+        <text wx:if='{{index < currentIndex}}' class='return-button'>返回本周</text>
       </view>
     </swiper-item>
   </swiper>
