--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxml
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxml
@@ -4,18 +4,21 @@
   <swiper class='movie-swiper' indicator-dots='{{true}}' previous-margin="50rpx" next-margin="50rpx"
    current='{{currentIndex}}'>
     <swiper-item class='movie' wx:for="{{weeklyMovieList}}" wx:key="{{index}}">
-      <view class='container movie-card'>
+      <view class='container movie-card' 
+        bindtap='f1'
+        data-movie-id='{{item.id}}'>
         <image class='movie-image' src="{{item.imagePath}}"></image>
         <text>第{{index+1}}周: {{item.name}}</text>
         <text>点评: {{item.comment}}</text>
         <text style='font-size:16px; color: red' wx:if='{{item.isHighlyRecommended}}'>强烈推荐</text>
         <!-- 对于需要频繁切换显示状态的可以使用 hidden 属性 -->
 
-        <text wx:if='{{index < currentIndex}}' class='return-button'>返回本周</text>
+        <text wx:if='{{index < currentIndex}}' 
+          class='return-button'
+          bindtap='f0'>
+          返回本周
+          </text>
       </view>
     </swiper-item>
   </swiper>
-
-  <text>{{count}}</text>
-  <button bindtap='f0'>+1</button>
 </view>
