电影周周看小程序: 修复电影卡片返回本周按钮点击事件向上传递的问题, 实现详情页基本框架

--- a/wechatApp/movieWeekly/pages/weekly/weekly.wxml
+++ b/wechatApp/movieWeekly/pages/weekly/weekly.wxml
@@ -15,7 +15,7 @@
 
         <text wx:if='{{index < currentIndex}}' 
           class='return-button'
-          bindtap='f0'>
+          catchtap='f0'>
           返回本周
           </text>
       </view>
